helios-library-app/src/objects/Waitlist_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Book__c</fullName>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipName>Waitlist</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Date_Notified__c</fullName>
        <label>Date Notified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Waiting</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Notified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Waitlist</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Book__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wait_Time__c</fullName>
        <formula>NULLVALUE( Date_Notified__c ,  TODAY() )  -  DATEVALUE(CreatedDate)</formula>
        <label>Wait Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Waitlist Entry</label>
    <nameField>
        <displayFormat>W-{000000}</displayFormat>
        <label>Waitlist Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waitlist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>